# ChaCha20-BLAKE2s-SIV

./: .gitignore  CMakeLists.txt  readme.md
example/: example.c
include/: cc20_b2s_siv.h  cc20_b2s_siv_types.h
lib/: blake2_common.h  blake2s.c  blake2s.h  chacha20.h  memzero.c
src/: cc20_b2s_siv.c
test/: benchmark.c  functional.c  util.h
